sw/source/core/text/porlay.cxx
@@ -1441,16 +1441,21 @@ void SwScriptInfo::InitScriptInfo(const SwTextNode& rNode,
 
         // special case for dotted circle since it can be used with complex
         // before a mark, so we want it associated with the mark's script
+        // tdf#112594: another soecial case for NNBSP followed by a Mongolian
+        // character, since NNBSP has special uses in Mongolian (tdf#112594)
         auto nPos = sal_Int32(nChg);
         auto nPrevPos = nPos;
-        rText.iterateCodePoints(&nPrevPos, -1);
+        auto nPrevChar = rText.iterateCodePoints(&nPrevPos, -1);
         if (nChg < TextFrameIndex(rText.getLength()) && nChg > TextFrameIndex(0) &&
             i18n::ScriptType::WEAK == g_pBreakIt->GetBreakIter()->getScriptType(rText, nPrevPos))
         {
-            auto nType = unicode::getUnicodeType(rText.iterateCodePoints(&nPos, 0));
+            auto nChar = rText.iterateCodePoints(&nPos, 0);
+            auto nType = unicode::getUnicodeType(nChar);
             if (nType == css::i18n::UnicodeType::NON_SPACING_MARK ||
                 nType == css::i18n::UnicodeType::ENCLOSING_MARK ||
-                nType == css::i18n::UnicodeType::COMBINING_SPACING_MARK)
+                nType == css::i18n::UnicodeType::COMBINING_SPACING_MARK ||
+                (nPrevChar == CHAR_NNBSP &&
+                 u_getIntPropertyValue(nChar, UCHAR_SCRIPT) == USCRIPT_MONGOLIAN))
             {
                 --nPos;
             }
