sd/qa/unit/layout-tests.cxx
@@ -354,6 +354,22 @@ CPPUNIT_TEST_FIXTURE(SdLayoutTest, testTableVerticalText)
     assertXPath(pXmlDoc, "//font[2]", "orientation", "900");
 }
 
+CPPUNIT_TEST_FIXTURE(SdLayoutTest, testTdf112594)
+{
+    xmlDocUniquePtr pXmlDoc = load("odp/Tdf112594.fodp");
+
+    // Test that a NNBSP is grouped with the Mongolian characters after it, so
+    // we have one text array covering the whole string.
+    //
+    // Without the fix, it fails with:
+    // - Expected: 4
+    // - Actual  : 3
+    // - In <>, attribute 'length' of '/metafile/push[1]/push[1]/textarray[3]' incorrect value.
+    assertXPath(pXmlDoc, "/metafile/push[1]/push[1]/textarray[3]", "index", "0");
+    assertXPath(pXmlDoc, "/metafile/push[1]/push[1]/textarray[3]", "length", "4");
+    assertXPathContent(pXmlDoc, "/metafile/push[1]/push[1]/textarray[3]/text", u"11\u202f\u1824");
+}
+
 CPPUNIT_PLUGIN_IMPLEMENT();
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
